@@ -109,15 +109,15 @@ function phpAds_warningMail ($campaign)
 			$Subject = $strViewsClicksLow.": ".$campaign["clientname"];
 			$To		  = $client['email'];
 			
-			$Headers = "Content-Transfer-Encoding: 8bit\n";
+			$Headers = "Content-Transfer-Encoding: 8bit\r\n";
 			
 			if (isset($phpAds_CharSet))
-				$Headers .= "Content-Type: text/plain; charset=".$phpAds_CharSet."\n"; 
+				$Headers .= "Content-Type: text/plain; charset=".$phpAds_CharSet."\r\n"; 
 			
-			$Headers .= "To: ".$client['contact']." <".$client['email'].">\n";
-			$Headers .= "From: <".$phpAds_admin_email.">\n";
+			$Headers .= "To: ".$client['contact']." <".$client['email'].">\r\n";
+			$Headers .= "From: <".$phpAds_admin_email.">\r\n";
 			if (!empty($phpAds_config['admin_email_headers']))
-				$Headers .= $phpAds_config['admin_email_headers']."\n";
+				$Headers .= $phpAds_config['admin_email_headers']."\r\n";
 			
 			$Body    = "$strMailHeader\n";
 			$Body 	.= "$strWarnClientTxt\n";
@@ -170,15 +170,15 @@ function phpAds_deactivateMail ($campaign)
 			$Subject = $strMailSubjectDeleted.": ".$campaign["clientname"];
 			$To		  = $client['email'];
 			
-			$Headers = "Content-Transfer-Encoding: 8bit\n";
+			$Headers = "Content-Transfer-Encoding: 8bit\r\n";
 			
 			if (isset($phpAds_CharSet))
-				$Headers .= "Content-Type: text/plain; charset=".$phpAds_CharSet."\n"; 
+				$Headers .= "Content-Type: text/plain; charset=".$phpAds_CharSet."\r\n"; 
 			
-			$Headers .= "To: ".$client['contact']." <".$client['email'].">\n";
-			$Headers .= "From: <".$phpAds_admin_email.">\n";
+			$Headers .= "To: ".$client['contact']." <".$client['email'].">\r\n";
+			$Headers .= "From: <".$phpAds_admin_email.">\r\n";
 			if (!empty($phpAds_config['admin_email_headers']))
-				$Headers .= $phpAds_config['admin_email_headers']."\n";
+				$Headers .= $phpAds_config['admin_email_headers']."\r\n";
 			
 			$Body  = $strMailHeader."\n";
 			$Body .= $strMailClientDeactivated;
